# uv

./: .buckconfig  .gitignore  BUCK  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.Bazel.toml  Cargo.toml  DESIGN_PATTERNS.md  Dockerfile  Dockerfile.dev  MODULE.bazel  PIP_COMPATIBILITY.md  PLAN.md  README.md  buckal.snap  clippy.toml  example-patch  example.py  issue-17465-analysis.md  mint.json  mkdocs.template.yml  plan-dist-manifest.json  pyproject.toml  report.md  reproduce-17650.py  rust-toolchain.toml  test_compatible.py  test_hashes.sh  test_match_runtime_demo.sh  test_match_runtime_selective.sh  uv.schema.json
.claude/commands/: check-ci.md
.claude/hooks/: session-start-web.sh  session-start.sh  sync-main-branch.sh
.config/: nextest.toml
.github/: renovate.json5
.github/workflows/: bench.yml  build-docker.yml  build-release-binaries.yml  check-docs.yml  check-fmt.yml  check-lint.yml  ci.yml  publish-docs.yml  publish-versions.yml  release.yml  sync-python-releases.yml  test-downstream.yml  test-ecosystem.yml  test-integration.yml  test-smoke.yml  test-system.yml  test-windows-trampolines.yml  test.yml
bazel/patches/: BUILD.bazel  aws-lc-sys-symlink.patch
crates/pep440-rs/: Cargo.toml
crates/pep508-rs/: Cargo.toml
crates/pypi-types/: Cargo.toml
crates/uv-audit/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-auth/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-bench/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-bin-install/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-build/: BUCK  BUILD.bazel
crates/uv-build-backend/: BUCK  BUILD.bazel
crates/uv-build-frontend/: BUCK  BUILD.bazel
crates/uv-cache/: BUCK  BUILD.bazel
crates/uv-cache-info/: BUCK  BUILD.bazel
crates/uv-cache-key/: BUCK  BUILD.bazel
crates/uv-cli/: BUCK  BUILD.bazel  Cargo.toml  build.rs
crates/uv-cli-common/: Cargo.toml
crates/uv-cli-common/src/: child.rs  exit_status.rs  lib.rs  printer.rs  reporters.rs  settings.rs  utils.rs
crates/uv-cli-pip/: Cargo.toml
crates/uv-cli-pip/src/: changelog.rs  diagnostics.rs  lib.rs  loggers.rs  operations.rs
crates/uv-cli-project/: Cargo.toml
crates/uv-cli-tool/: Cargo.toml
crates/uv-cli-tool/src/: common.rs  install.rs  lib.rs  list.rs  run.rs  target.rs  uninstall.rs  update_shell.rs  upgrade.rs
crates/uv-client/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-configuration/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-console/: BUCK  BUILD.bazel
crates/uv-dev/: BUCK  BUILD.bazel
crates/uv-dirs/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-dirs/src/: lib.rs
crates/uv-dispatch/: BUCK  BUILD.bazel
crates/uv-distribution/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-distribution-filename/: BUCK  BUILD.bazel
crates/uv-distribution-types/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-errors/: Cargo.toml
crates/uv-extract/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-flags/: BUCK  BUILD.bazel
crates/uv-fs/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-git/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-git-types/: BUCK  BUILD.bazel
crates/uv-globfilter/: BUCK  BUILD.bazel
crates/uv-install-wheel/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-installer/: BUCK  BUILD.bazel
crates/uv-keyring/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-keyring/src/: macos.rs
crates/uv-keyring/tests/: threading.rs
crates/uv-logging/: BUCK  BUILD.bazel
crates/uv-macros/: BUCK  BUILD.bazel
crates/uv-mdtest/: Cargo.toml
crates/uv-metadata/: BUCK  BUILD.bazel
crates/uv-normalize/: BUCK  BUILD.bazel
crates/uv-once-map/: BUCK  BUILD.bazel
crates/uv-operations/: Cargo.toml
crates/uv-operations/src/: bytecode.rs  diagnostics.rs  environment.rs  error.rs  installation.rs  latest.rs  lib.rs  loggers.rs  requirements.rs  resolution.rs
crates/uv-options-metadata/: BUCK  BUILD.bazel
crates/uv-pep440/: BUCK  BUILD.bazel
crates/uv-pep508/: BUCK  BUILD.bazel
crates/uv-pep768/: Cargo.toml
crates/uv-pep768/src/: frames.rs  image.rs  layout.rs  lib.rs  string_cache.rs
crates/uv-pep768/src/handle/: linux.rs  macos.rs  mod.rs  unsupported.rs
crates/uv-performance-memory-allocator/: BUCK  BUILD.bazel
crates/uv-platform/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-platform-tags/: BUCK  BUILD.bazel
crates/uv-preview/: BUCK  BUILD.bazel
crates/uv-profile/: Cargo.toml  build.rs
crates/uv-profile/src/: lib.rs  pprof.rs  sampler.rs
crates/uv-profile/src/proto/: mod.rs  profile.proto
crates/uv-profile/src/rss/: linux.rs  macos.rs  mod.rs
crates/uv-pty/: Cargo.toml
crates/uv-publish/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-pypi-types/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-python/: BUCK  BUILD.bazel  Cargo.toml  build.rs  download-metadata.json  fetch-download-metadata.py
crates/uv-redacted/: BUCK  BUILD.bazel
crates/uv-requirements/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-requirements-txt/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-resolver/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-scripts/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-settings/: BUCK  BUILD.bazel  Cargo.toml
crates/uv-shell/: BUCK  (+1 more)
crates/uvx/: Cargo.toml
docs/: features.md  first-steps.md  index.md  index.mdx  installation.md  mint.json
example/: Dockerfile  pyproject.toml
plan/: MIGRATION.md  PRIORITIES.md  README.md  authentication.md  build-backend.md  building.md  caching.md  cannot-migrate.md  export.md  git-dependencies.md  migration-status.md  pip-compile-breakdown.md  pip-install-breakdown.md  pip.md  project-lifecycle.md  python-management.md  reorganization-strategy.md  resolution.md  rm-unblocked-tests.md  style.md  tools.md  update-migration-status.py  virtual-environments.md  workspaces.md
repro-17645/: README.md  pyproject.toml  test_typer.py
scripts/: build-trampolines.sh  check-release-artifact-binary-sboms.sh  check-release-artifact-sboms.sh  check-release-artifact-wheel-sboms.sh  check-release-artifacts-signed.sh  ci-smoke-test.sh  download-release-artifacts.sh  extract-release-artifacts.sh  install-check-extensions.sh  install-mold.sh  install-oras.sh  manual-github-release.sh  normalize-trampoline-versions.py  remote-build.sh
(+744 files in other folders)
