module(
    name = "uv",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_rust", version = "0.66.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.92.0"],
)
use_repo(rust, "rust_toolchains")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.annotation(
    crate = "aws-lc-sys",
    patch_args = ["-p1"],
    patches = ["//bazel/patches:aws-lc-sys-symlink.patch"],
    repositories = ["workspace_index"],
    version = "0.39.0",
)
crate.annotation(
    crate = "bzip2-sys",
    crate_features = ["static"],
    repositories = ["workspace_index"],
    version = "0.1.13+1.0.8",
)
crate.annotation(
    build_script_env = {"LZMA_API_STATIC": "1"},
    crate = "lzma-sys",
    repositories = ["workspace_index"],
    version = "0.1.20",
)
crate.from_cargo(
    name = "workspace_index",
    cargo_lockfile = "//:Cargo.Bazel.lock",
    manifests = ["//:Cargo.Bazel.toml"],
)
use_repo(
    crate,
    "workspace_index",
    "workspace_index__ambient-id-0.0.11",
    "workspace_index__anstream-1.0.0",
    "workspace_index__anyhow-1.0.102",
    "workspace_index__arcstr-1.2.0",
    "workspace_index__arrayvec-0.7.6",
    "workspace_index__assert_cmd-2.2.0",
    "workspace_index__assert_fs-1.1.3",
    "workspace_index__astral-pubgrub-0.3.3",
    "workspace_index__astral-reqwest-middleware-0.5.1",
    "workspace_index__astral-reqwest-retry-0.9.1",
    "workspace_index__astral-tl-0.7.11",
    "workspace_index__astral-tokio-tar-0.6.0",
    "workspace_index__astral-version-ranges-0.1.4",
    "workspace_index__astral_async_http_range_reader-0.10.0",
    "workspace_index__astral_async_zip-0.0.17",
    "workspace_index__async-channel-2.5.0",
    "workspace_index__async-compression-0.4.19",
    "workspace_index__async-trait-0.1.89",
    "workspace_index__backon-1.6.0",
    "workspace_index__base64-0.22.1",
    "workspace_index__bitflags-2.11.0",
    "workspace_index__blake2-0.10.6",
    "workspace_index__boxcar-0.2.14",
    "workspace_index__bytecheck-0.8.2",
    "workspace_index__byteorder-1.5.0",
    "workspace_index__cargo-util-0.2.27",
    "workspace_index__clap-4.6.0",
    "workspace_index__clap_complete_command-0.6.1",
    "workspace_index__configparser-3.1.0",
    "workspace_index__console-0.16.3",
    "workspace_index__csv-1.4.0",
    "workspace_index__ctrlc-3.5.2",
    "workspace_index__cyclonedx-bom-0.8.0",
    "workspace_index__dashmap-6.1.0",
    "workspace_index__data-encoding-2.10.0",
    "workspace_index__diskus-0.9.0",
    "workspace_index__dotenvy-0.15.7",
    "workspace_index__dunce-1.0.5",
    "workspace_index__either-1.15.0",
    "workspace_index__embed-manifest-1.5.0",
    "workspace_index__encoding_rs_io-0.1.7",
    "workspace_index__enumflags2-0.7.12",
    "workspace_index__etcetera-0.11.0",
    "workspace_index__flate2-1.1.9",
    "workspace_index__fs-err-3.3.0",
    "workspace_index__futures-0.3.32",
    "workspace_index__glob-0.3.3",
    "workspace_index__globset-0.4.18",
    "workspace_index__globwalk-0.9.1",
    "workspace_index__goblin-0.10.5",
    "workspace_index__h2-0.4.13",
    "workspace_index__hashbrown-0.16.1",
    "workspace_index__hex-0.4.3",
    "workspace_index__html-escape-0.2.13",
    "workspace_index__http-1.4.0",
    "workspace_index__ignore-0.4.25",
    "workspace_index__indexmap-2.13.0",
    "workspace_index__indicatif-0.18.4",
    "workspace_index__indoc-2.0.7",
    "workspace_index__insta-1.46.3",
    "workspace_index__itertools-0.14.0",
    "workspace_index__jiff-0.2.23",
    "workspace_index__junction-1.4.2",
    "workspace_index__mailparse-0.16.1",
    "workspace_index__markdown-1.0.0",
    "workspace_index__md-5-0.10.6",
    "workspace_index__memchr-2.8.0",
    "workspace_index__miette-7.6.0",
    "workspace_index__mimalloc-0.1.48",
    "workspace_index__nanoid-0.4.0",
    "workspace_index__nix-0.31.2",
    "workspace_index__open-5.3.3",
    "workspace_index__owo-colors-4.3.0",
    "workspace_index__path-slash-0.2.1",
    "workspace_index__pathdiff-0.2.3",
    "workspace_index__percent-encoding-2.3.2",
    "workspace_index__petgraph-0.8.3",
    "workspace_index__predicates-3.1.4",
    "workspace_index__pretty_assertions-1.4.1",
    "workspace_index__proc-macro2-1.0.106",
    "workspace_index__procfs-0.18.0",
    "workspace_index__quote-1.0.45",
    "workspace_index__rayon-1.11.0",
    "workspace_index__ref-cast-1.0.25",
    "workspace_index__reflink-copy-0.1.29",
    "workspace_index__regex-1.12.3",
    "workspace_index__regex-automata-0.4.14",
    "workspace_index__reqsign-0.20.0",
    "workspace_index__reqwest-0.13.2",
    "workspace_index__rkyv-0.8.15",
    "workspace_index__rmp-serde-1.3.1",
    "workspace_index__rust-netrc-0.1.2",
    "workspace_index__rustc-hash-2.1.1",
    "workspace_index__rustix-1.1.4",
    "workspace_index__rustls-native-certs-0.8.3",
    "workspace_index__rustls-pki-types-1.14.0",
    "workspace_index__same-file-1.0.6",
    "workspace_index__schemars-1.2.1",
    "workspace_index__seahash-4.1.0",
    "workspace_index__secret-service-5.1.0",
    "workspace_index__security-framework-3.7.0",
    "workspace_index__self-replace-1.5.0",
    "workspace_index__serde-1.0.228",
    "workspace_index__serde-untagged-0.1.9",
    "workspace_index__serde_json-1.0.149",
    "workspace_index__serde_yaml-0.9.34-deprecated",
    "workspace_index__sha2-0.10.9",
    "workspace_index__similar-2.7.0",
    "workspace_index__smallvec-1.15.1",
    "workspace_index__spdx-0.13.4",
    "workspace_index__syn-2.0.117",
    "workspace_index__tar-0.4.45",
    "workspace_index__target-lexicon-0.13.5",
    "workspace_index__temp-env-0.3.6",
    "workspace_index__tempfile-3.27.0",
    "workspace_index__textwrap-0.16.2",
    "workspace_index__thiserror-2.0.18",
    "workspace_index__tikv-jemallocator-0.6.1",
    "workspace_index__tokio-1.50.0",
    "workspace_index__tokio-stream-0.1.18",
    "workspace_index__tokio-util-0.7.18",
    "workspace_index__toml-0.9.10-spec-1.1.0",
    "workspace_index__toml_edit-0.24.0-spec-1.1.0",
    "workspace_index__tracing-0.1.44",
    "workspace_index__tracing-durations-export-0.3.1",
    "workspace_index__tracing-subscriber-0.3.23",
    "workspace_index__tracing-tree-0.4.1",
    "workspace_index__unicode-width-0.2.2",
    "workspace_index__unscanny-0.1.0",
    "workspace_index__url-2.5.8",
    "workspace_index__uuid-1.22.0",
    "workspace_index__walkdir-2.5.0",
    "workspace_index__webpki-root-certs-1.0.6",
    "workspace_index__which-8.0.2",
    "workspace_index__windows-0.61.3",
    "workspace_index__windows-registry-0.5.3",
    "workspace_index__windows-version-0.1.7",
    "workspace_index__wiremock-0.6.5",
    "workspace_index__wmi-0.18.3",
    "workspace_index__xz2-0.1.7",
    "workspace_index__zeroize-1.8.2",
    "workspace_index__zip-8.1.0",
    "workspace_index__zstd-0.13.3",
)
