[project]
name = "uv-17645-repro"
version = "0.1.0"
description = "Reproduction for uv issue #17645"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.20.0",
]

[project.optional-dependencies]
extra1 = ["typer-slim>=0.20.0"]
extra2 = ["rich>=13.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
