[package]
name = "uv-pep768"
version = "0.0.41"
description = "PEP 768 safe external debugger client for CPython 3.14+"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fs-err = { workspace = true }
goblin = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
nix = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
mach2 = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
tempfile = { workspace = true }
